--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.7",
+    "autoprefixer": "^10.4.13",
+    "axios": "^1.3.2",
+    "clsx": "^1.2.1",
     "next": "13.1.6",
+    "postcss": "^8.4.21",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "short-unique-id": "^4.4.4",
+    "tailwindcss": "^3.2.4",
+    "uuid": "^9.0.0",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "eslint": "8.33.0",
